examples/shawarma/k8s-sidecar-injector.yaml
apiVersion: v1
kind: Service
metadata:
  name: shawarma-webhook
  namespace: kube-system
  labels:
    k8s-app: shawarma-webhook
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 443
    targetPort: https
    protocol: TCP
  selector:
    k8s-app: shawarma-webhook
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shawarma-webhook
  namespace: kube-system
  labels:
    k8s-app: shawarma-webhook
spec:
  replicas: 2
  selector:
    matchLabels:
      k8s-app: shawarma-webhook
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        k8s-app: shawarma-webhook
    spec:
      serviceAccountName: shawarma-webhook
      volumes:
      - name: secrets
        secret:
          secretName: shawarma-webhook-certificate
      containers:
      - name: shawarma-webhook
        imagePullPolicy: Always
        image: REPLACE_ME/shawarma-webhook:0.0.2
        ports:
        - name: https
          containerPort: 443
        volumeMounts:
        - name: secrets
          mountPath: /etc/shawarma-webhook/certs
        livenessProbe:
          httpGet:
            scheme: HTTPS
            path: /health
            port: https
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 3
        resources:
          requests:
            cpu: "0.5"
            memory: 1Gi
          limits:
            cpu: "0.5"
            memory: 2Gi
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: shawarma-webhook
  labels:
    k8s-app: shawarma-webhook
  annotations:
    cert-manager.io/inject-ca-from: kube-system/shawarma-webhook
webhooks:
- name: "webhook.shawarma.centeredge.io"
  failurePolicy: "Ignore" # we fail "open" if the webhook is down hard
  rules:
  - operations: [ "CREATE" ]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["pods"]
  namespaceSelector:
    # Require that the namespace have the `shawarma-injection: enabled` label
    matchExpressions:
    - key: shawarma-injection
      operator: In
      values: ["enabled"]
  clientConfig:
    service:
      name: shawarma-webhook
      namespace: kube-system
      path: "/mutate"
  admissionReviewVersions: ["v1beta1", "v1"]
  sideEffects: None
